--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ and then decode and extract the message and information within. Usually the QR-c
 images are corrupted, Blurred or at least rotated which make the pattern recognition
 harder than simple scenarios. The following image, demonstrates a damaged QR-Code: </p>
 
-<p><img src="images/QR_eg_WikiMobile.jpg" alt="">.</p>
+<p><img src="images/QRcode.jpg" alt="">.</p>
 
 <p>In this situation robust algorithms can effectively recognize
 specic patterns in the image and reconstruct the main matrix of quick response code.
@@ -154,7 +154,7 @@ of software, different test images have been tested. Note that this project is r
 to QR codes version-1 through version-6.</p>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
