--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ and then decode and extract the message and information within. Usually the QR-c
 images are corrupted, Blurred or at least rotated which make the pattern recognition
 harder than simple scenarios. The following image, demonstrates a damaged QR-Code: </p>
 
-<p><img src="images/qrcode.jpg" alt="">.</p>
+<p><img src="images/qrcode.png" alt="">.</p>
 
 <p>In this situation robust algorithms can effectively recognize
 specic patterns in the image and reconstruct the main matrix of quick response code.
